# satisfaction-suffices

./: .gitignore  .pre-commit-config.yaml  .test_proof  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SCHEDULE_A.md  SECURITY.md  pyproject.toml
.codex/metaopt/: backlog.jsonl  done.jsonl  last_run.md  next_up.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  license-drift.yml  pages.yml  publish.yml  sync-license.yml
.serena/: project.yml
data/: benchmark_report_smoke.json  benchmark_report_smoke_after_watch.json  experiment_phase_transition_budget_sweep_branch_after_depth.json  experiment_phase_transition_budget_sweep_branch_baseline.json  experiment_phase_transition_budget_sweep_smoke.json  experiment_phase_transition_budget_sweep_smoke_after_watch.json
data/domains/meta_sciences/: ibos_seed.jsonl
docs/: _config.yml  index.md  paper.md
huggingface/paper/: README.md
huggingface/space/: README.md  app.py  requirements.txt
paper/: Makefile  paper_01_submission.md  paper_01_submission.tex
satisfiable_ai/: benchmarks.py
scripts/: build_bridge_stage.py  experiment_phase_transition_budget_sweep.py  run_task_benchmarks.py  sat_gate.py
src/satisfaction_suffices/: __init__.py  bridge.py
src/satisfaction_suffices/logic/: __init__.py  constraint.py  cycle_detector.py  ppl.py  proof_evo.py
src/satisfaction_suffices/verifier/: __init__.py  code_to_3sat.py  partial.py  sat.py  text_to_3sat.py  verify.py
tests/: test_benchmarks.py  test_bridge.py  test_constraint.py  test_cycle_detector.py  test_exhaustive.py  test_meta_mirror_degeneration.py  test_partial.py  test_ppl.py  test_proof_evo.py  test_sat_solver.py  test_verdicts_comprehensive.py  test_verify.py
